# RoGIOT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RoGIOT.sublime-project  compile.sh  construct_project.sh  setup_cmake_clangd.sh
proj/: foo.c  foo.h  main.c
proj/include/rogiot/: rgt.h
proj/rogiot/: rgt.h
proj/rogiot/src/: [api]_error.c  [api]_rgt.c  error.h  macros.h  mainloop.c  mainloop.h  rgt.c  rgt_init.c
proj/src/: Pipe.h  PtrIter.h  RgtWindow.h  [api]_error.c  [api]_rgt.c  coroutine.h  error.h  error_report.h  macros.h  mainloop.c
proj/src/api_impl/: create_debug_output.c  create_xterm.c  draw.c  error_report.c  rgt.c
proj/src/containers/: FrameBuffer.c  FrameBuffer.h
proj/src/window/: RgtWindow.c  RgtWindow.h  create_xterm.c  create_xterm.h  xterm.h
proj/src/window/xterm/: control.c  control.h  create.c  create.h  io.c  io.h  struct.h
